style: fix bio section visibility

--- a/styles/global.css
+++ b/styles/global.css
@@ -9,4 +9,5 @@
     Cantarell, Noto Sans, sans-serif;
   --shadow-strength: 1%;
   --shadow-color: 220 3% 15%;
+  --header-height: 64px;
 }
